--- a/week3 notebook.ipynb
+++ b/week3 notebook.ipynb
@@ -2896,8 +2896,8 @@
       "text/plain": [
        "            Model Name  Jaccard Score  F1 Score  Log Loss\n",
        "0                  KNN          0.697     0.575       NaN\n",
-       "1        Decision Tree          0.698     0.574     0.604\n",
-       "2  Logistic Regression          0.698     0.574       NaN"
+       "1        Decision Tree          0.698     0.574       NaN\n",
+       "2  Logistic Regression          0.698     0.574       0.694"
       ]
      },
      "execution_count": 273,
